@@ -16,26 +16,22 @@ function Test-Permission
 {
     <#
     .SYNOPSIS
-    Tests if permissions are set on a path.
+    Tests if permissions are set on a file, directory, registry key, or certificate's private key..
 
     .DESCRIPTION
     Sometimes, you don't want to use `Grant-Permission` on a big tree.  In these situations, use `Test-Permission` to see if permissions are set on a given path.
 
-    This function supports file system and registry permissions.  You can also test the inheritance and propogation flags on containers, in addition to the permissions, with the `ApplyTo` parameter.  See [Grant-Permission](Grant-Permission.html) documentation for an explanation of the `ApplyTo` parameter.
+    This function supports file system, registry, and certificate private key permissions.  You can also test the inheritance and propogation flags on containers, in addition to the permissions, with the `ApplyTo` parameter.  See [Grant-Permission](Grant-Permission.html) documentation for an explanation of the `ApplyTo` parameter.
 
     Inherited permissions on *not* checked by default.  To check inherited permission, use the `-Inherited` switch.
 
     By default, the permission check is not exact, i.e. the user may have additional permissions to what you're checking.  If you want to make sure the user has *exactly* the permission you want, use the `-Exact` switch.  Please note that by default, NTFS will automatically add/grant `Synchronize` permission on an item, which is handled by this function.
 
+    When checking for permissions on certificate private keys, if a certificate doesn't have a private key, `$true` is returned.
+
     .OUTPUTS
     System.Boolean.
 
-    .LINK
-    http://msdn.microsoft.com/en-us/library/system.security.accesscontrol.filesystemrights.aspx
-    
-    .LINK
-    http://msdn.microsoft.com/en-us/library/system.security.accesscontrol.registryrights.aspx
-    
     .LINK
     ConvertTo-ContainerInheritanceFlags
 
@@ -51,6 +47,15 @@ function Test-Permission
     .LINK
     Revoke-Permission
 
+    .LINK
+    http://msdn.microsoft.com/en-us/library/system.security.accesscontrol.filesystemrights.aspx
+    
+    .LINK
+    http://msdn.microsoft.com/en-us/library/system.security.accesscontrol.registryrights.aspx
+    
+    .LINK
+    http://msdn.microsoft.com/en-us/library/system.security.accesscontrol.cryptokeyrights.aspx
+    
     .EXAMPLE
     Test-Permission -Identity 'STARFLEET\JLPicard' -Permission 'FullControl' -Path 'C:\Enterprise\Bridge'
 
@@ -65,6 +70,11 @@ function Test-Permission
     Test-Permission -Identity 'STARFLEET\Worf' -Permission 'Write' -ApplyTo 'Container' -Path 'C:\Enterprise\Brig'
 
     Demonstrates how to test for inheritance/propogation flags, in addition to permissions.
+
+    .EXAMPLE
+    Test-Permission -Identity 'STARFLEET\Data' -Permission 'GenericWrite' -Path 'cert:\LocalMachine\My\1234567890ABCDEF1234567890ABCDEF12345678'
+
+    Demonstrates how to test for permissions on a certificate's private key. If the certificate doesn't have a private key, returns `$true`.
     #>
     [CmdletBinding()]
     param(
@@ -111,7 +121,12 @@ function Test-Permission
     }
 
     $providerName = Get-PathProvider -Path $Path | Select-Object -ExpandProperty 'Name'
-    if( $providerName -eq 'FileSystem' -and $Exact )
+    if( $providerName -eq 'Certificate' )
+    {
+        $providerName = 'CryptoKey'
+    }
+
+    if( ($providerName -eq 'FileSystem' -or $providerName -eq 'CryptoKey') -and $Exact )
     {
         # Synchronize is always on and can't be turned off.
         $Permission += 'Synchronize'
@@ -148,11 +163,19 @@ function Test-Permission
             $propagationFlags = ConvertTo-PropagationFlag -ContainerInheritanceFlag $ApplyTo
         }
     }
-    $acl = Get-Acl -Path $Path | 
-                Select-Object -ExpandProperty Access | 
+
+    if( $providerName -eq 'CryptoKey' )
+    {
+        # If the certificate doesn't have a private key, return $true.
+        if( (Get-Item -Path $Path | Where-Object { -not $_.HasPrivateKey } ) )
+        {
+            return $true
+        }
+    }
+
+    $acl = Get-Permission -Path $Path -Identity $Identity -Inherited:$Inherited | 
                 Where-Object { $_.AccessControlType -eq 'Allow' } |
                 Where-Object { $_.IsInherited -eq $Inherited } |
-                Where-Object { $_.IdentityReference -eq $Identity } |
                 Where-Object { 
                     if( $Exact )
                     {
